--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 html {
     font-size: 16px;
 }
@@ -10,8 +10,87 @@ p {
     font-size: 1rem;
 }
 
-h1 {
-    font-size: 3rem;
+.fuente {
+    font-size: 220%;
+    text-align: center;
+}
+
+.titulo {
+    background-image: url(../img/banner-2.jpg);
+    height: 100vh;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section1 {
+    height: 100%;
+    width: 100%;
+}
+
+.h1 {
+    font-size: 360%;
+    padding-left: 20%;
+}
+
+.p1 {
+    font-size: 220%;
+    padding-left: 20%;
+}
+
+.p2 {
+    text-align: center;
+}
+
+.imgc1 {
+    height: 70%;
+    width: 70%;
+    display: block;
+    margin: auto;
+    padding-bottom: 10%;
+}
+
+.col3 {
+    padding-top: 05%;
+}
+
+.h4 {
+    font-size: 300%;
+    padding-left: 5%;
+}
+
+.p4 {
+    font-size: 220%;
+}
+
+.p5 {
+    color: white;
+    padding-left: 20%;
+    font-size: 15px;
+}
+
+.abajo {
+    vertical-align: top;
+}
+
+.imgc3 {
+    height: 100%;
+    width: 100%;
+}
+
+.h2 {
+    text-align: center;
+    font-size: 300%;
+}
+
+.fondo {
+    background-color: rgb(127, 255, 176);
+}
+
+.img4 {
+    height: 100%;
+    width: 100%;
 }
 
 h2 {
@@ -30,34 +109,9 @@ h5 {
     font-size: 1.15rem;
 }
 
-h6 {
-    font-size: 1.05rem;
-}
-
-.grey {
-    color: gray;
-}
-
-.header h1 {
-    color: darkcyan;
-}
-
-.white {
-    color: white;
-}
-
-.section-1 {
-    background-color: aquamarine;
+.h6 {
+    font-size: 320%;
     text-align: center;
-}
-
-.section-2 {
-    background-color: deepskyblue;
-    text-align: center;
-}
-
-.section-3 {
-    background-color: black;
 }
 
 
@@ -68,39 +122,29 @@ h6 {
 
 * {
     box-sizing: border-box;
+    font-family: 'Quicksand', sans-serif;
 }
 
 body {
     margin: 0;
 }
 
-.padding-m {
-    padding: 2.5%;
+.fondo2 {
+    background-color: black;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
-img {
-    border-radius: 3px;
-    width: 100%;
+.p3 {
+    color: white;
+    padding-left: 20%;
+    font-size: 15px;
 }
 
-.grow {
-    font-size: 300%;
-}
-
-.helps {
-    font-size: 250%;
-}
-
-.have {
-    font-size: 90%;
-}
-
-.foot {
-    font-size: 70%;
-}
-
-.image {
-    background-image: url("../img/banner-2.jpg");
+.p4 {
+    color: black;
+    padding-left: 5%;
+    font-size: 200%;
 }
 
 
@@ -118,25 +162,27 @@ img {
 .column-1 {
     width: 100%;
     float: left;
-    padding: 5%;
+    margin-top: -4px;
+}
+
+.title2 {
+    background-color: blue;
+    margin-top: -4px;
 }
 
 .column-2 {
     width: 50%;
     float: left;
-    padding: 5%;
 }
 
 .column-3 {
     width: 33.33%;
     float: left;
-    padding: 5%;
 }
 
 .column-4 {
     width: 25%;
     float: left;
-    padding: 5%;
 }
 
 .column-5 {
@@ -166,7 +212,7 @@ img {
     justify-content: center;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     /* column-2 pasará de tener 50% a 100% */
     .column-2 {
         width: 100%;
@@ -178,5 +224,45 @@ img {
     /* column-4 pasará de tener 25% a 50% */
     .column-4 {
         width: 50%;
+    }
+    .titulo {
+        font-size: 350%;
+    }
+    .h1 {
+        padding: 5%;
+        font-size: 340%;
+    }
+    .p1 {
+        padding: 5%;
+        font-size: 260%;
+    }
+    .h2 {
+        padding: 5%;
+    }
+    .h4 {
+        padding-left: 10%;
+        padding-right: 10%;
+        font-size: 310%;
+    }
+    .p4 {
+        padding-left: 10%;
+        padding-right: 10%;
+        color: black;
+    }
+    .img4 {
+        margin-top: -4px;
+    }
+    .p3 {
+        font-size: 160%;
+    }
+    .p4 {
+        font-size: 220%;
+    }
+    .p5 {
+        font-size: 160%;
+        padding-left: 10%;
+    }
+    .flex {
+        display: block;
     }
 }
